    Export->Export As..., that pops up a dialog allowing one to
    choose the export format, as well as the destination pathname.
    Also, it is available via the mini-buffer (or the -x switch)
    through a proper new LFUN (see below).

- The Advanced Find and Replace feature now supports cancel of a
  long search operation by hitting the ESC key.

- Linux desktop file specification and scalable icon has been
  included in the tarball.

- The format pdf aka "PDF (ps2pdf)" was split in two formats: pdf aka
  "PDF (ps2pdf)" and pdf6 aka "PDF (graphics)". pdf6 is used for PDF
  files included as graphics. Custom external templates and converters
  might need to be adjusted. The format split was needed since otherwise
  an odt->pdf converter which is intended for included graphics only
  did interfere with document export via ps2pdf.

- The support for ArmTeX (a special typesetting engine for Armenian)
  was removed. Writing text in Armenian is now possible in a native
  way using XeTeX.


The following pref variables were added in 2.1:

- \\close_buffer_with_last_view [yes|no|ask]
  When the user closes the last view on a document, close the
  document as well ("yes"), or hide the document ("no"), or ask
  the user ("ask").

- \\completion_minlength
  Defines the minimal length of a word to be added to the list of 
  words for text completion.

- \\default_length_unit
  Defines the default length unit: 2 for centimers, 6 for inches.

- \\default_otf_view_format
  Defines the default output format for documents with non-tex
  fonts (OpenType fonts).

- \\texinputs_prefix
  Defines the prefix for the TEXINPUTS environment variable. A
  single '.' in the paths will get replaced with the current
  document dir and also non-absolute paths will be prefixed with
  that dir. 

  The default semantics of TEXINPUTS apply, such that, for example,
  if a path is terminated with a double slash, all subdirectories