@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
+<application>
+  <id type="desktop">lyx.desktop</id>
+  <licence>GPL-2</licence>
+  <name>LyX</name>
+  <summary>The Document Processor</summary>
+  <description>
+    <p>LyX is a document processor that encourages an approach to
+    writing based on the structure of your documents (WYSIWYM) and
+    not simply their appearance (WYSIWYG).</p>
+    <p>LyX combines the power and flexibility of TeX/LaTeX with the
+    ease of use of a graphical interface. This results in
+    world-class support for creation of mathematical content (via a
+    fully integrated equation editor) and structured documents like
+    academic articles, theses, and books. In addition, staples of
+    scientific authoring such as reference list and index creation
+    come standard. But you can also use LyX to create a letter or a
+    novel or a theatre play or film script. A broad array of ready,
+    well-designed document layouts are built in.</p>
+    <p>LyX is for people who want their writing to look great,
+    right out of the box. No more endless tinkering with formatting
+    details, “finger painting” font attributes or futzing around
+    with page boundaries. You just write. On screen, LyX looks like
+    any word processor; its printed output — or richly
+    cross-referenced PDF, just as readily produced — looks like
+    nothing else.</p>
+  </description>
+  <screenshots>
+    <screenshot type="default" width="1000" height="814">http://www.lyx.org/images/about/main_window.png</screenshot>
+    <screenshot width="623" height="431">http://www.lyx.org/images/about/preview_dvi.png</screenshot>
+    <screenshot width="962" height="720">http://www.lyx.org/images/about/edit_menu.png</screenshot>
+  </screenshots>
+  <url type="homepage">http://www.lyx.org</url>
+  <updatecontact>lyx-devel@lists.lyx.org</updatecontact>
+</application>
